Update PyUI to d25a8cc94a45328b32741a09a6f53a1ee1015b29
d25a8cc Fix OptionSelectUI for spruce
22c16d3 Fix typo issue when updating game config menu to allow relative or full paths
9e3e21e Remove uneeded logging
8c64c1f Account for absolute paths when running apps from the game config menu
f6ebe29 Log args passed in on startup
83248fb Remove uneeded prints
fbe9650 Put button watchers behind a config
a033118 Add support for sub directories in game folders
8fe7bdd Default for gameSelectionViewType should be TEXT_AND_IMAGE_LIST_VIEW
70faa93 Ensure configs exist on startup, if not copy defaults
6e20969 Cleanup how apps are launched to better match stock
1cef9b7 Let the emu config determine if pyui should load the in game menu
ad65f56 Monitor for lid / power button on the flip
c25397f Remove uneeded log
77aabf0 Prevent crashes -- though not optimized yet
af78fc9 Move theme settings into their own subfolder
b045881 Remove temp test options from main menu popup
4a51ae3 Add support for directly changing top bar text color
a7a7184 Use shorter names for views so they fit on device for user selection
10dd910 Make the game screen selection view type changeable
5e84db5 Theme.show_bottom_bar() is now a method and not prop, missed in cleanup
72ed723 Add option for showing index text, add battery icon color setting
84b6219 Switch PyUI Config to be static
dcb8f9b Fix optionSelectUi w/ latest changes
9312f32 Remove unused imports
bceb4de Convert ViewCreator to be a static class
c1ebeb9 Convert device to be a static class
4926549 Switch controller to be static
dc7d2b7 Refactor Display to be a static class
86fe6cc Refactor theme to be a static class
13dc92d Add some padding after favorites icon
d4a3928 Start adding in themeing options
d597033 Remove debug log
7c78dc2 Adjust game system select menu to be compatible with stock and themes
0cef80f Add str rep for game_system_config
82b648b Account for SPRUCE themes using different names than stock for icons
82d9e1c Ensure main menu refreshe

--- a/App/PyUI/main-ui/config.json
+++ b/App/PyUI/main-ui/config.json
@@ -1,5 +1,6 @@
 {
-    "theme": "SPRUCE",
+    "theme": "STOCK",
     "themeDir": "/mnt/SDCARD/Themes/",
-    "turboDelayMs": 300
+    "turboDelayMs": 300,
+    "enableButtonWatchers": true
 }
