Disable recents in standard SPRUCE theme so we don't forget to do it later

--- a/Themes/SPRUCE/config.json
+++ b/Themes/SPRUCE/config.json
@@ -2,7 +2,6 @@
     "name": "Spruce",
     "author": "tenlevels",
     "description": "spruce theme for a30",
-    "showBottomBar": false,
     "batteryPercentage": {
         "color": "#EBDBB2",
         "font": "nunwen.ttf",
@@ -40,6 +39,6 @@
         "size": 24,
         "color": "#FBF1C7",
         "selectedcolor": "#FBF1C7"
-
-    }
+    },
+    "recentsEnabled": false
 }
