Brick: NDS now runs in DraStic-Steward beta 0516

--- a/Emu/NDS/config/drastic-A30.cfg
+++ b/Emu/NDS/config/drastic-A30.cfg
@@ -23,7 +23,7 @@ hires_3d = 0
 use_rtc_custom_time = 0
 rtc_custom_time = 0
 rtc_system_time = 1
-firmware.username = Dr DraStic
+firmware.username = Sr.Spruce
 firmware.language = 1
 firmware.favorite_color = 0
 firmware.birthday_month = 1
