--- a/Emu/NDS/config/drastic-Brick.cfg
+++ b/Emu/NDS/config/drastic-Brick.cfg
@@ -2,7 +2,7 @@ frameskip_type = 2
 frameskip_value = 1
 safe_frameskip = 0
 show_frame_counter = 0
-screen_orientation = 3
+screen_orientation = 0
 screen_swap = 1
 savestate_number = 0
 fast_forward = 0
@@ -27,7 +27,7 @@ rtc_custom_time = 0
 rtc_system_time = 0
 slot2_device_type = 0
 rumble_frames = 3
-firmware.username = Dr DraStic
+firmware.username = Sr.Spruce
 firmware.language = 1
 firmware.favorite_color = 0
 firmware.birthday_month = 1
