Update to PyUI version 38fb63f4f867ab7d40cf5e74333e4df5ef572feb
38fb63f Set mute value properly and dont refresh system.config() on sound fix
47e12fb Use an 'Empty View' to not have to account for 0 options in all the views
4791cdc If a system is missing after it was in favorites/recents, do not error
e7dc698 Reboot if calibration file exists for now
c0b33a6 WIP to try adding stick calibration
b49ba29 Have the main menu title be config driven
300daa3 Account for volume being 0 on fixing the volume to prevent a 0.1s audio play
fdad77b Account for restoring sound after sleeping
793b17e Add volume indicator on volume change
5df53bc Add last option to carousel to allow sides to hang off
5bb21d8 Add themeing options and ability to use fixed size secondary
44301bc Carousel working minus very minor things
0366f15 Fix left and  right to work with cols > 3

--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -2,5 +2,6 @@
     "theme": "SPRUCE",
     "themeDir": "/mnt/SDCARD/Themes/",
     "turboDelayMs": 300,
-    "enableButtonWatchers": false
+    "enableButtonWatchers": false,
+    "mainMenuTitle": "spruceUI"
 }
