--- a/App/PyUI/config.json
+++ b/App/PyUI/config.json
@@ -1,7 +1,7 @@
 {
-  "label": "MainPy",
+  "label": "PyUx",
   "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/menuswitch.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/menuswitch.png",
   "launch": "launch.sh",
-  "description": "Toggle between MainUI and MainPy"
+  "description": "Name changes each nightly"
 }
