Update PyUI to f89811225aba5ec1e1c105ad679a0c3a9ab7f3ee

--- a/App/PyUI/theme-overrides/PyUI/Themes/SPRUCE/config.json
+++ b/App/PyUI/theme-overrides/PyUI/Themes/SPRUCE/config.json
@@ -41,5 +41,6 @@
         "color": "#FBF1C7",
         "selectedcolor": "#FBF1C7"
     },
-    "recentsEnabled": false
+    "recentsEnabled": false,
+    "topBarInitialXOffset": 60
 }
