Update 64 bit PLATFORM.cfg files to match B_START_2 values that we use in buttons_watchdog.sh instead of those in keymon

--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -38,9 +38,9 @@ export B_L3="1 317" # also logs left fnkey stuff
 export B_R3="1 318" # also logs right fnkey stuff
 
 export B_START="1 315"
-export B_START_2="start_pressed" # only registers 0 on release, no 1.
+export B_START_2="enter_pressed" # only registers 0 on release, no 1.
 export B_SELECT="1 314"
-export B_SELECT_2="select_pressed" # registers both 1 and 0
+export B_SELECT_2="rctrl_pressed" # registers both 1 and 0
 
 export B_VOLUP="1 115" # has actual key codes like the buttons
 export B_VOLUP_2="volume up" # only registers 0 on release, no 1.
