--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -3,5 +3,5 @@
     "themeDir": "/mnt/SDCARD/Themes/",
     "turboDelayMs": 300,
     "enableButtonWatchers": false,
-    "mainMenuTitle": "spruceUI"
+    "mainMenuTitle": "spruceOS"
 }
