SYSTEM_JSON points to pyui version if appropriate

--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -1,10 +1,15 @@
 #!/bin/sh
 # TRIMUI Brick platform specific variables
 
+if [ -f "$PYUI_FLAG" ]; then
+    export SYSTEM_JSON="/mnt/SDCARD/Saves/brick-config.json"
+else
+    export SYSTEM_JSON="/mnt/UDISK/system.json"
+fi
+
 export DISPLAY_WIDTH="1024"
 export DISPLAY_HEIGHT="768"
 export DISPLAY_ROTATION="0"
-export SYSTEM_JSON="/mnt/UDISK/system.json"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH=""
 export DEVICE_BRIGHTNESS_PATH=""
@@ -17,7 +22,6 @@ export EVENT_PATH_JOYPAD="/dev/input/event4"
 export SD_DEV="/dev/mmcblk1p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
-
 
 # Keycodes
 
