--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -1,15 +1,20 @@
 #!/bin/sh
 # Miyoo Flip platform specific variables
 
+if [ -f "$PYUI_FLAG" ]; then
+    export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-config.json"
+else
+    export SYSTEM_JSON="/userdata/system.json"
+fi
+
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
-export SYSTEM_JSON="/userdata/system.json"
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/class/leds/work"
 export DEVICE_BRIGHTNESS_PATH="/sys/class/backlight/backlight/brightness"
 
-export HOME="/mnt/sdcard"
+export HOME="/mnt/SDCARD"
 
 export EVENT_PATH_KEYBOARD="/dev/input/event5"
 export EVENT_PATH_JOYPAD="/dev/input/event5"
@@ -18,7 +23,6 @@ export EVENT_PATH_VOLUME="/dev/input/event0"
 export SD_DEV="/dev/mmcblk1p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
-
 
 # Keycodes
 
