--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -1,10 +1,15 @@
 #!/bin/sh
 # Miyoo A30 platform specific variables
 
+if [ -f "$PYUI_FLAG" ]; then
+    export SYSTEM_JSON="/mnt/SDCARD/Saves/a30-config.json"
+else
+    export SYSTEM_JSON="/config/system.json"
+fi
+
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="270"
-export SYSTEM_JSON="/config/system.json"
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
 export DEVICE_BRIGHTNESS_PATH="/sys/devices/virtual/disp/disp/attr/lcdbl"
