--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -1,10 +1,15 @@
 #!/bin/sh
 # TRIMUI Smart Pro platform specific variables
 
+if [ -f "$PYUI_FLAG" ]; then
+    export SYSTEM_JSON="/mnt/SDCARD/Saves/smartpro-config.json"
+else
+    export SYSTEM_JSON="/mnt/UDISK/system.json"
+fi
+
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
-export SYSTEM_JSON="/mnt/UDISK/system.json"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH=""
 
