Update PyUI to 08d57d1c6f1112e6e2693ea603e505889c71db95
08d57d1 Add Collections/Favorites/Recents to game select menu if main menu is skipped
2d08c7e make collections enabled theme dependent
3b418d2 Fix collections menu handling -- Need to test folders in collections still (or block them)
04d64c8 Add collections to the menu -- need to fix menu button when in collections menu
f291c20 Start adding in collection support
304c086 Fix naming of recents
074d4d5 Add support / name mappings for GENESIS and 32X
2c04c6a Support ROMS case insensitive for getting boxart
ed39528 If a bar goes accross the entire screen, just stretch it when patching themes
71e639b Bypass showing any wifi icon on devices that don't say they support wifi
c171251 Don't crash if there is no app icon
9793c33 Add option to exit PyUI
58fec4a Do not allow exitting when main menu is skipped
26410d3 Basic support for subfolders when restoring state
2d7f998 Center the selection in the list view when restoring the state
63c953b Store the last app selection for restoring the view on tabbing
8fa8b30 Retain spot in game select menu when tabbing between games/apps/settings
9dacec4 Top bar when main menu is hidden is now Games/Apps/Settings
65e0c62 Rename page to page_bg since page will mean something else
7e608b2 Fix the judder when scrolling between full screen system selection
e897242 Allow toggling between Game/Apps/Settings with L/R when main menu is skipped
6c84cd7 Fix indentation issue in miyoo_game_list so it works
c983c4f Add in hue support -- thanks cobaltgit
f8563bb Add support for miyoogamelist.xml
91a438d Add button remapping support
6b1dd1b Properly track if a theme is changed so we don't always restart on settings change
7b31209 Do not exit on 'B' Press
070df53 Add some more common system name mappings
444102b Only have a single background thread looking up descriptions
011007c Load description in the background on a separate thread
1b1a8ee Basic state tracking so we return to the last selected loca

--- a/App/PyUI/config.json
+++ b/App/PyUI/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "PyUx",
+  "label": "PyUI",
   "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/menuswitch.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/menuswitch.png",
   "launch": "launch.sh",
