Use the PyUI in game menu for ports rather than trying to kill on menu press

--- a/Emu/PORTS/config.json
+++ b/Emu/PORTS/config.json
@@ -15,6 +15,7 @@
   "rompath": "/mnt/SDCARD/Roms/PORTS",
   "imgpath": "/mnt/SDCARD/Roms/PORTS/Imgs",
   "gamelist": "/mnt/SDCARD/Roms/PORTS/miyoogamelist.xml",
+  "ingamemenu": 1,
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
