Update PyUI to 904ea0bf103e350efc781098370e1369028af776
Disable PyUI WiFi monitoring

--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -3,5 +3,6 @@
     "themeDir": "/mnt/SDCARD/Themes/",
     "turboDelayMs": 300,
     "enableButtonWatchers": false,
+    "enableWifiMonitor": false,
     "mainMenuTitle": "spruceOS"
 }
