Don't touch WiFi when PyUI is running

--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -3,6 +3,6 @@
     "themeDir": "/mnt/SDCARD/Themes/",
     "turboDelayMs": 300,
     "enableButtonWatchers": false,
-    "enableWifiMonitor": false,
+    "enableWifiMonitor": true,
     "mainMenuTitle": "spruceOS"
 }
