wifi: use per-platform wpa_supplicant files

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -21,6 +21,8 @@ export SD_DEV="/dev/mmcblk0p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/bin/Python3/bin/python3
 
+export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
+
 # Keycodes
 
 export B_POWER="1 116"
