--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -20,6 +20,8 @@ export SD_DEV="/dev/mmcblk1p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 
+export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
+
 # Keycodes
 
 export B_POWER="1 116"
