--- a/Themes/SPRUCE/config.json
+++ b/Themes/SPRUCE/config.json
@@ -40,5 +40,6 @@
         "color": "#FBF1C7",
         "selectedcolor": "#FBF1C7"
     },
-    "recentsEnabled": false
+    "recentsEnabled": false,
+    "topBarInitialXOffset": 60
 }
