Revert "flip: correct wpa_supplicant.conf path"
This reverts commit 60d22753d810192fddaeaa6b18c19ef9206a9801.

--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -24,7 +24,7 @@ export SD_DEV="/dev/mmcblk1p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 
-export WPA_SUPPLICANT_FILE="/etc/wpa_supplicant.conf"
+export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 
 # Keycodes
 
